--- a/views/default/register.hbs
+++ b/views/default/register.hbs
@@ -39,9 +39,14 @@
 					<input class="input100" type="password" name="password" placeholder="Enter password">
 					<span class="focus-input100"></span>
 				</div>
-				<div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+				<div class="wrap-input100 validate-input m-b-18" data-validate="Code is required">
 					<span class="label-input100">Confirm Password</span>
 					<input class="input100" type="password" name="passwordConfirm" placeholder="Enter password confirm">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
+					<span class="label-input100">Admin code</span>
+					<input class="input100" type="password" name="admincode" placeholder="Enter code">
 					<span class="focus-input100"></span>
 				</div>
 				<div class="wrap-input100 validate-input m-b-18">
