--- a/views/default/register.hbs
+++ b/views/default/register.hbs
@@ -44,6 +44,16 @@
 					<input class="input100" type="password" name="passwordConfirm" placeholder="Enter password confirm">
 					<span class="focus-input100"></span>
 				</div>
+				<div class="wrap-input100 validate-input m-b-26" data-validate="Phone is required">
+					<span class="label-input100">Your Phone</span>
+					<input class="input100" type="number" name="phone" placeholder="Enter phone">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 validate-input m-b-26" data-validate="Profession is required">
+					<span class="label-input100">Your profesion</span>
+					<input class="input100" type="text" name="profession" placeholder="Enter your profession">
+					<span class="focus-input100"></span>
+				</div>
 				<div class="wrap-input100 validate-input m-b-18" data-validate="Password is required">
 					<span class="label-input100">Admin code</span>
 					<input class="input100" type="password" name="admincode" placeholder="Enter code">
