--- a/views/default/infoUser.hbs
+++ b/views/default/infoUser.hbs
@@ -23,7 +23,7 @@
           <h5>
             {{user.firstName}}{{user.lastName}}
           </h5>
-          <h6>
+          {{!-- <h6>
             Web Developer and Designer
           </h6>
           <p class="proile-rating">RANKINGS : <span>8/10</span></p>
@@ -36,17 +36,14 @@
               <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
                 aria-selected="false">Timeline</a>
             </li>
-          </ul>
+          </ul> --}}
         </div>
-      </div>
-      <div class="col-md-2">
-        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
         <div class="profile-work">
-          <p>WORK LINK</p>
+          {{!-- <p>WORK LINK</p>
           <a href="">Website Link</a><br />
           <a href="">Bootsnipp Profile</a><br />
           <a href="">Bootply Profile</a>
@@ -55,7 +52,7 @@
           <a href="">Web Developer</a><br />
           <a href="">WordPress</a><br />
           <a href="">WooCommerce</a><br />
-          <a href="">PHP, .Net</a><br />
+          <a href="">PHP, .Net</a><br /> --}}
         </div>
       </div>
       <div class="col-md-8">
@@ -90,7 +87,7 @@
                 <label>Phone</label>
               </div>
               <div class="col-md-6">
-                <p>123 456 7890</p>
+                <p>{{user.phone}}</p>
               </div>
             </div>
             <div class="row">
@@ -98,57 +95,18 @@
                 <label>Profession</label>
               </div>
               <div class="col-md-6">
-                <p>Web Developer and Designer</p>
+                <p>{{user.profession}}</p>
               </div>
             </div>
           </div>
           <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <div class="row">
               <div class="col-md-6">
-                <label>Experience</label>
+                <label></label>
               </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
+              
             </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Hourly Rate</label>
-              </div>
-              <div class="col-md-6">
-                <p>10$/hr</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Total Projects</label>
-              </div>
-              <div class="col-md-6">
-                <p>230</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>English Level</label>
-              </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Availability</label>
-              </div>
-              <div class="col-md-6">
-                <p>6 months</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <label>Your Bio</label><br />
-                <p>Your detail description</p>
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
