--- a/views/partials/default/footer.hbs
+++ b/views/partials/default/footer.hbs
@@ -9,8 +9,7 @@
 					<div class="footer-section">
 
 						<a class="logo" href="#"><img src="/images/logo.png" alt="Logo Image"></a>
-						<p class="copyright">Bona @ 2019. All rights reserved.</p>
-						<p class="copyright">Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+						<p class="copyright">Blog @ 2019. All rights reserved.</p>
 						<ul class="icons">
 							<li><a href="#"><i class="ion-social-facebook-outline"></i></a></li>
 							<li><a href="#"><i class="ion-social-twitter-outline"></i></a></li>
